--- a/controller.yaml
+++ b/controller.yaml
@@ -205,7 +205,8 @@ spec:
         name: sealed-secrets-controller
     spec:
       containers:
-      - args: []
+      - args: 
+        - "--update-status"
         command:
         - controller
         env: []
